--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ pyrealsense2~=2.50.0.3812
 numpy~=1.21.4
 open3d~=0.14.1
 opencv-contrib-python
-keyboard
+keyboard~=0.13.5
+trimesh~=3.9.42
+imageio~=2.13.5
+pyzbar~=0.1.8
+pyqrcode~=1.2.1
